about and help updated

--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -12,6 +12,14 @@
     <div class="main-content">
         {{>header}}
         <p>{{helpText}}</p>
+        <p>On the home page their is an input box where you'd required to enter valid location and click on search. If the application is able to find the location you entered, it will generate the Weather Forecast for the given location otherwise it will generate the error if any</p>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <p>Hopefully we were helpfull to you</p>
     </div>
     
     {{>footer}}
