--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,8 +10,8 @@
 
 <body>
     <div class="main-content">
-        {{>header}}m Ankur Garg.
-        <p>Hi! I'This application was created by me. This is the Web application for Weather Forcast based on MapBox and Darksky.net API's</p>
+        {{>header}}
+        <p>Hi! I'm Ankur Garg. This application was created by me. This is the Web application for Weather Forcast based on MapBox and Darksky.net API's</p>
         <img class="portrait" src="/img/sunset.jpg">
     </div>
     
